# pixelcount-samples

./: README.md  setup.cfg
src/pixelcount/: algorithm.py  frontend.py
src/pixelcount/.ipynb_checkpoints/: algorithm-checkpoint.py  frontend-checkpoint.ipynb
src/pixelcount_samples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
