[metadata]
name = pixelcount-samples
version = 0.0.1
author = Bart van Pelt
author_email = bartvanpelt1997@gmail.com
description = Pixel counting for wafer images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peltbartvan/pixelcount-samples
project_urls =
    Bug Tracker = https://github.com/peltbartvan/pixelcount-samples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	opencv-python>=4.4.0
	ipywidgets>=7.6.3
	numpy>=1.19
	voila>=0.3.0

[options.packages.find]
where = src
